# MPI-filter-images

./: .gitignore  CMakeLists.txt  PPMtypes.c  PPMtypes.h  README.md  build.sh  filter.c  filter.sh
gui/: CMakeLists.txt  build.sh  main.c  run.sh
